// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multi-argument style 1`] = `
  () => <div className="element_41k">Hello World</div>;
  css(\`
  	.element_41k {
  		value: foo bar baz;
  	}
  \`);
`;

exports[`output attributes 1`] = `
  () => <div className="element_41k" />;
  css(\`
  	.element_41k {
  		background: red;
  	}
  \`);
`;

exports[`output style of same name 1`] = `
  () => <div className="element_41k">Hello World</div>;
  css(\`
  	.element_41k {
  		margin-left: 20px;
  		margin-right: 20px;
  	}
  \`);
`;
